--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRulMHCJFMvJ0RzVR_gNwnZQoUDf2vCc7sdcw&s" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LibraryWebApp</title>
 </head>
